# opaquedb

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  TODO.md  vcpkg.json
.claude/skills/commit/: SKILL.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
cmake/: OpaqueDBCompileOptions.cmake
config/: opaquedb.default.toml
docker/: Dockerfile  docker-compose.yml
examples/: CMakeLists.txt  README.md  crypto_bench.cpp  direct_engine.cpp  e2e_client.cpp  weather.csv  weather.sql
packaging/: opaquedb.service  postinst  postrm  prerm
proto/: CMakeLists.txt  admin.proto  internal.proto  opaquedb.proto
src/: main.cpp
src/admin/: CMakeLists.txt  file_keyring_store.cpp  keyring_store.cpp  service.cpp
src/admin/include/opaquedb/admin/: file_keyring_store.h  keyring_store.h  service.h
src/auth/: CMakeLists.txt  authenticator.cpp  authenticators.cpp
src/auth/include/opaquedb/auth/: authenticator.h  authenticators.h
src/backend/: CMakeLists.txt  capabilities.cpp  registry.cpp
src/backend/include/opaquedb/backend/: capabilities.h  pir_backend.h  registry.h
src/backend/reference/: CMakeLists.txt  reference.cpp
src/backend/reference/include/opaquedb/backend/reference/: reference.h
src/cli/: CMakeLists.txt  app.cpp  util.cpp  util.h
src/cli/commands/: admin_commands.cpp  admin_commands.h  config_command.cpp  config_command.h  data_commands.cpp  data_commands.h  insert_command.cpp  insert_command.h  query_command.cpp  query_command.h  repl_command.cpp  repl_command.h  run_command.cpp  run_command.h  token_command.cpp  token_command.h
src/cli/include/opaquedb/cli/: command.h
src/client/: CMakeLists.txt  query_client.cpp
src/client/include/opaquedb/client/: query_client.h
src/cluster/: CMakeLists.txt  fake_etcd.cpp  manager.cpp  real_etcd_client.cpp  shard_map.cpp
src/cluster/include/opaquedb/cluster/: etcd_client.h  fake_etcd.h  manager.h  real_etcd_client.h  shard_map.h
src/config/: CMakeLists.txt  config.cpp  default_config.cpp  default_config_data.h.in  loader.cpp
src/config/include/opaquedb/config/: config.h  loader.h
src/core/: CMakeLists.txt  key_codec.cpp  record_codec.cpp  schema.cpp  slot_codec.cpp  version.cpp
src/core/include/opaquedb/core/: key_codec.h  record_codec.h  schema.h  slot_codec.h  table_id.h  version.h  wire.h
src/crypto/: CMakeLists.txt  context.cpp  key_material.cpp  ops.cpp  serialize.cpp
src/crypto/include/opaquedb/crypto/: context.h  key_material.h  ops.h  serialize.h
src/log/: CMakeLists.txt  log.cpp
src/log/include/opaquedb/log/: log.h
src/planner/: CMakeLists.txt  planner.cpp
src/planner/include/opaquedb/planner/: planner.h
src/server/: CMakeLists.txt  admin_grpc_service.cpp  engine.cpp  ingest.cpp  node_server.cpp  query_coordinator.cpp  query_service.cpp  repository_manager.cpp  request_gate.cpp  shard_service.cpp
src/server/include/opaquedb/server/: admin_grpc_service.h  engine.h  ingest.h  node_server.h  query_coordinator.h  query_service.h  rate_limiter.h  repository_manager.h  request_gate.h  shard_service.h
src/sql/: CMakeLists.txt  ast.cpp  ddl.cpp  logical_plan.cpp  parser.cpp  tokenizer.cpp
src/sql/include/opaquedb/sql/: ast.h  ddl.h  logical_plan.h  parser.h  tokenizer.h
src/storage/: CMakeLists.txt  catalog.cpp  checked.h  crc32.cpp  crc32.h  epoch_manifest.cpp  io_util.cpp  io_util.h  little_endian.h  local_repository.cpp  mapped_file.cpp  segment.cpp  staging.cpp  wal.cpp
src/storage/include/opaquedb/storage/: catalog.h  epoch_manifest.h  mapped_file.h  repository.h  segment.h  staging.h  wal.h
tests/: CMakeLists.txt  admin_test.cpp  auth_test.cpp  catalog_test.cpp  cli_render_test.cpp  cluster_test.cpp  config_test.cpp  core_version_test.cpp  crypto_test.cpp  distributed_test.cpp  file_keyring_store_test.cpp  key_codec_test.cpp  manifest_test.cpp  matcher_bug_repro_test.cpp  planner_test.cpp  record_codec_test.cpp  reference_backend_test.cpp  request_gate_test.cpp  schema_test.cpp  serialize_test.cpp  server_test.cpp  slot_codec_test.cpp  sql_test.cpp  storage_test.cpp  transport_security_test.cpp
